@@ -1,3 +1,8 @@
+2008-10-19  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbot.c: Update group expander
+	highlighting dynamically
+
 2008-10-18  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkbot.c: fixed group sorting, using group
